syntax = "proto3";
import "athenaapis/dto.proto";

option go_package = "github.com/athena-intelli/athena/api/pb/objectRetrievalService;objectRetrievalService";
option java_multiple_files = true;
option java_package = "com.athena.api.service";

package ObjectRetrievalService;

service ObjectRetrievalService{
  rpc GetFactoryById(dto.DObjectId) returns(dto.DFactory){}
  rpc GetFactoryByCode(dto.DObjectCode) returns(dto.DFactory){}
  rpc GetWorkshopById(dto.DObjectId) returns(dto.DWorkshop){}
  rpc GetWorkshopByCode(dto.DObjectCode) returns(dto.DWorkshop){}
  rpc GetProductionLineById(dto.DObjectId) returns(dto.DProductionLine){}
  rpc GetProductionLineByCode(dto.DObjectCode) returns(dto.DProductionLine){}
  rpc GetWorkStationById(dto.DObjectId)returns(dto.DWorkStation){}
  rpc GetWorkStationByCode(dto.DObjectCode)returns(dto.DWorkStation){}
  rpc GetEquipmentById(dto.DObjectId)returns(dto.DEquipment){}
  rpc GetEquipmentByCode(dto.DObjectCode)returns(dto.DEquipment){}
  rpc GetPartByID(dto.DObjectId)returns(dto.DPart){}
  rpc GetPartByNumberAndRevision(dto.DPartNumberAndRevision)returns(dto.DPart){}
  rpc GetLocationById(dto.DObjectId) returns(dto.DLocation){}
  rpc GetLocationByCode(dto.DObjectCode) returns(dto.DLocation){}
  rpc GetLotById(dto.DObjectId)returns(dto.DLot){}
  rpc GetLotBySerialNumber(dto.DObjectSerialNumber)returns(dto.DLot){}
  rpc GetRuntimeBomById(dto.DObjectId)returns(dto.DRuntimeBom){}
  rpc GetRouteById(dto.DObjectId)returns(dto.DRoute){}
  rpc GetRouteByCodeAndVersion(dto.DObjectCode)returns(dto.DRoute){}
  rpc GetOperationById(dto.DObjectId) returns(dto.DRouteOperation){}
  rpc GetOperationByCode(dto.DObjectCode) returns(dto.DRouteOperation){}
  rpc GetUnitById(dto.DObjectId)returns(dto.DUnit){}
  rpc GetUnitBySeriaNumber(dto.DObjectSerialNumber)returns(dto.DUnit){}
  rpc GetUserById(dto.DObjectId)returns(dto.DUser){}
  rpc GetUserByName(dto.DObjectName)returns(dto.DUser){}
  rpc GetWorkOrderById(dto.DObjectId)returns(dto.DWorkOrder){}
  rpc GetWorkOrderByNumber(dto.DObjectName)returns(dto.DWorkOrder){}
  rpc GetDocById(dto.DObjectId)returns(dto.DDoc){}
  rpc GetDocByCode(dto.DObjectCode)returns(dto.DDoc){}

  rpc GetEquipments(dto.DFilter)returns(stream dto.DEquipment){}
  rpc GetWorkStations(dto.DFilter)returns(stream dto.DWorkStation){}
  rpc GetProductionLines(dto.DFilter)returns(stream dto.DProductionLine){}
  rpc GetWorkshops(dto.DFilter)returns(stream dto.DWorkshop){}
  rpc GetFactories(dto.DFilter)returns(stream dto.DFactory){}
  rpc GetConsumeParts(dto.DFilter)returns(stream dto.DConsumedPart){}
  rpc GetBOMs(dto.DFilter)returns(stream dto.DBom){}
  rpc GetBOMItems(dto.DFilter)returns(stream dto.DBomItem){}
  rpc GetBoxes(dto.DFilter)returns(stream dto.DBox){}
  rpc GetLots(dto.DFilter)returns(stream dto.DLot){}
  rpc GetUnits(dto.DFilter)returns(stream dto.DUnit){}
  rpc GetParts(dto.DFilter)returns(stream dto.DPart){}
  rpc GetRoutes(dto.DFilter)returns(stream dto.DRoute){}
  rpc GetRouteSteps(dto.DFilter)returns(stream dto.DRouteStep){}
  rpc GetRouteOperations(dto.DFilter)returns(stream dto.DRouteOperation){}
  rpc GetRuntimeBomItems(dto.DFilter)returns(stream dto.DRuntimeBomItem){}
  rpc GetRuntimeBoms(dto.DFilter)returns(stream dto.DRuntimeBom){}
  rpc GetWorkOrders(dto.DFilter)returns(stream dto.DWorkOrder){}
  rpc GetUsers(dto.DFilter)returns(stream dto.DUser){}
  rpc GetDocs(dto.DFilter)returns(stream dto.DDoc){}

}
